--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <ul class="nk-nav">
                     <li><a href="https://www.youtube.com/CatmanjoeCMJ">YouTube</a></li>
                     <li><a href="https://www.twitch.tv/catmanjoe">Twitch</a></li>
-                    <li><a href="https://discord.com/invite/f6U8Gakc?utm_source=Discord%20Widget&utm_medium=Connect">Discord</a></li>
+                    <li><a href="https://discord.com/invite/526HpKMyXJ?utm_source=Discord%20Widget&utm_medium=Connect">Discord</a></li>
                 </ul>
             </div>
         </div>
@@ -397,7 +397,7 @@
 <div class="nk-side-buttons nk-side-buttons-visible">
     <ul>
         <li>
-            <a href="https://discord.com/invite/f6U8Gakc?utm_source=Discord%20Widget&utm_medium=Connect" target="_blank" class="nk-btn nk-btn-lg link-effect-4">Join our Discord!</a>
+            <a href="https://discord.com/invite/526HpKMyXJ?utm_source=Discord%20Widget&utm_medium=Connect" target="_blank" class="nk-btn nk-btn-lg link-effect-4">Join our Discord!</a>
         </li>
         <li>
             <span class="nk-btn nk-btn-lg nk-btn-icon nk-bg-audio-toggle">
