--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="_nK">
+    <meta name="description" content="Welcome to the official website for the best Minecraft content including millions of maps, packs and bundles of goods.">
+    <meta name="author" content="Catmanjoe">
     <title>Catmanjoe Official</title>
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
+    <meta property="og:image" content="assets/images/favicon.png" />
+    <meta name="theme-color" content="#08e8de">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300i,400,400i,700%7cMarcellus+SC" rel="stylesheet">
     <link rel="stylesheet" href="assets/vendor/bootstrap/dist/css/bootstrap.min.css">
     <script defer src="assets/vendor/fontawesome-free/js/all.js"></script>
