--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Welcome to the official website for the best Minecraft content including millions of maps, packs and bundles of goods.">
     <meta name="author" content="Catmanjoe">
     <title>Catmanjoe Official</title>
-    <meta property="og:image" content="https://raw.githubusercontent.com/lbatkin/catmanjoeCMJ/main/assets/images/unnamed.png">
+    <meta data-react-helmet="true" property="og:image" content="https://raw.githubusercontent.com/lbatkin/catmanjoeCMJ/main/assets/images/unnamed.png"/>
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <meta name="theme-color" content="#08e8de">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300i,400,400i,700%7cMarcellus+SC" rel="stylesheet">
